--- a/proposal/ll.tex
+++ b/proposal/ll.tex
@@ -4,3 +4,4 @@
 \newcommand{\frule}[2]{#1 \Leftarrow #2}
 \newcommand{\brule}[2]{#1 \leftarrow #2}
 \newcommand{\query}[1]{?#1}
+\newcommand{\imp}{\rightarrow}
