--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -14,7 +14,8 @@
 \usepackage[numbers,sort]{natbib}
 \usepackage[letterpaper,twoside]{geometry}
 \usepackage{changepage}
-
+\usepackage{listings}
+\lstset{numbers=left}
 \draftstamp{\today}{DRAFT}
 
 \newcommand{\fyes}{\CIRCLE}
@@ -32,6 +33,7 @@
 %  backref,pageanchor=true,plainpages=false, pdfpagelabels, bookmarks,bookmarksnumbered
 %]{hyperref}
 %\hypersetup{linktoc=all}
+\newcommand{\url}[1]{\texttt{#1}}
 
 \include{ll}
 \begin{document}
