Added proposed work chapter

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -82,6 +82,7 @@ Manuel Egele, Boston University
 \include{introduction}
 \include{background}
 \include{holmes}
+\include{proposed}
 
 \backmatter
 \renewcommand{\bibsection}{\chapter{\bibname}}
